--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   },
   "version": "1.0.0",
   "scripts": {
-    "start": "PORT=3333 node server/app.js",
+    "start": "PORT=3333 nodemon server/index.js",
     "clean": "rm -rf node_modules && rm -rf public && npm install && bower install && gulp build"
   },
   "license": "MIT",
   "dependencies": {
-    "connect": "^3.3.4",
-    "morgan": "^1.5.1",
-    "serve-static": "^1.8.1"
+    "good": "^5.1.1",
+    "good-console": "^4.1.0",
+    "hapi": "^8.2.0",
+    "jade": "^1.9.2"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
